--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.7",
     "fbemitter": "^2.1.1",
     "node-sass": "^4.3.0",
+    "randomstring": "^1.1.5",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-modal": "^1.7.7",
